# strawberry-graphql-example

./: pyproject.toml  run.py  settings.py
migrations/migrations/: 000001.init.rollback.sql  000001.init.sql
src/: context.py
src/books/: models.py
src/users/: gql.py  models.py
