[tool.poetry]
name = "strawberry-graphql-example"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
strawberry-graphql = {version = "0.128.0", extras = ["fastapi"]}
databases = {extras = ["asyncpg"], version = "^0.8.0"}
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
yoyo-migrations = "^8.2.0"
psycopg2-binary = "^2.9.9"
pypika = "^0.48.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.12.0"
mypy = "^1.7.0"
httpx = "^0.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
